--- a/packages/apron-0.9.9/Makefile.config
+++ b/packages/apron-0.9.9/Makefile.config
@@ -29,20 +29,20 @@ HAS_OCAML = 1
 # Where to install and to find APRON
 # ($(APRON_PREFIX)/include, $(APRON_PREFIX)/lib)
 #
-APRON_PREFIX = /usr
+APRON_PREFIX = ${SANDBOX}
 
 # Where to install and to find MLGMPIDL
 # ($(MLGMPIDL_PREFIX)/lib)
 #
-MLGMPIDL_PREFIX = /usr/local
+MLGMPIDL_PREFIX = ${SANDBOX}
 
 # Where to find GMP ($(GMP_PREFIX)/include, ($GMP_PREFIX)/lib
 #
-GMP_PREFIX = /usr
+# GMP_PREFIX = /usr
 
 # Where to find MPFR ($(MPFR_PREFIX)/include, ($MPFR_PREFIX)/lib
 #
-MPFR_PREFIX = /usr
+# MPFR_PREFIX = /usr
 
 # Where to find PPL ($(PPL_PREFIX)/include, $(PPL_PREFIX)/lib
 #
@@ -50,18 +50,18 @@ PPL_PREFIX = /usr
 
 # Where to find OCAML ($(CAML_PREFIX)/bin, $(CAML_PREFIX)/lib/ocaml, ...)
 #
-CAML_PREFIX = /usr
+# CAML_PREFIX = /usr
 
 # Where to find CAMLIDL ($(CAMLIDL_PREFIX)/bin, $(CAMLIDL_PREFIX)/lib/ocaml, ...)
 #
-CAMLIDL_PREFIX = /usr
+CAMLIDL_PREFIX = ${SANDBOX}
 
 ######################################################################
 # Tools and Flags
 ######################################################################
 
 # C compiler
-CC = gcc
+# CC = gcc
 
 # C compilation flags
 CFLAGS = \
@@ -86,7 +86,7 @@ CFLAGS_DEBUG = \
 #	   -mfpmath=sse -ftracer -funit-at-a-time -funroll-loops -fmove-all-movables
 
 # C++ compiler
-CXX = g++
+# CXX = g++
 # C++ compilation flags
 CXXFLAGS = \
 -Wcast-qual -Wswitch \
