fixes to work with llvm 3.5

--- a/llvm-reader/Makefile
+++ b/llvm-reader/Makefile
@@ -2,7 +2,10 @@ LLC = llvm-config
 
 BIN = llvm-reader
 
-CXXFLAGS += `${LLC} --cxxflags`
+CXXFLAGS += -O0 -g \
+	-DLLVM_MINOR=`${LLC} --version | awk -F. "{print \\$$2}"` \
+	`${LLC} --cxxflags`
+
 LDFLAGS += `${LLC} --ldflags --system-libs --libs bitreader core support`
 
 all: ${BIN}
