create Config.ml to locate the compilation dir

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,7 +1,7 @@
 all: Driver.native
 
 %.cmo %.mli %.byte %.native: force
-	@SANDBOX="`pwd`/../packages/sandbox" ocamlbuild $@
+	@ocamlbuild $@
 
 clean:
 	rm -fr *.native *.byte _build
