--- a/source/Makefile
+++ b/source/Makefile
@@ -1,7 +1,9 @@
+include ../config.mk
+
 all: Driver.native
 
 %.cmo %.mli %.byte %.native: force
-	@ocamlbuild $@
+	@CXX=$(CXX) ocamlbuild $@
 
 clean:
 	rm -fr *.native *.byte _build
